--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
 </head>
 <body>
     <h1>ChilloutVR Join</h1>
+	<h3>⚠️ Make Sure you have Deep Links installed in ChilloutVR for this to work ⚠️</h3>
     <p>Create and copy your ChilloutVR instance link:</p>
     <input type="text" id="inputBox" placeholder="Enter InstanceID or chilloutvr://instance/join link here">
     <label title="If you don't know what this does, leave it alone">
